# databaze_classes

./: CMakeLists.txt  README.md  dz2_2sem.cpp  employees.cpp  employees.h  inputfile.txt  secondinputfile.txt  structual_divisions.cpp  structual_divisions.cpp~  structual_divisions.cpv~  structual_divisions.h
.github/workflows/: CI.yml  cmake.yml
databaze/: CMakeLists.txt  dz2_2sem.cpp
includes/: CMakeLists.txt  employees.h  structual_divisions.cpp
tests/: tests.cpp
