cmake_minimum_required(VERSION 3.10)
project(data_baze)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(includes)
set(GLOB SRC_SRC "databaze/dz2_2sem.cpp")
add_executable(data_baze databaze/dz2_2sem.cpp includes/structual_divisions.cpp includes/employees.cpp) 
if(BUILD_TESTS)
  add_compile_options(--coverage)
endif()


if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  file(GLOB LIB_TEST_SOURCES tests/*.cpp)
  add_executable(check ${LIB_TEST_SOURCES})
  target_link_libraries(check includes gtest_main gmock_main)
  add_test(NAME check COMMAND check)
endif()
